--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ set(CMAKE_CXX_COMPILER "/usr/local/opt/llvm/bin/clang++")
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/opt/llvm/lib")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/opt/llvm/lib -lc++fs")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -lc++fs")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native")
 
 set(SOURCE_FILES
     main.cpp
@@ -25,12 +25,6 @@ set(SOURCE_FILES
     filesystem_demo/testfilesystem.cpp
     record_management/record_manager.cpp
     record_management/record_manager.h
-    filesystem/file_manager.cpp
-    filesystem/file_manager.h
-    filesystem/page.cpp
-    filesystem/page.h
-    filesystem/page_buffer.cpp
-    filesystem/page_buffer.h
     record_management/table_descriptor.h
     config/config.h
     record_management/record_descriptor.h
@@ -39,6 +33,9 @@ set(SOURCE_FILES
     data_storage/data_descriptor.h
     data_storage/data.h
     data_storage/data.cpp
-    utility/noncopyable.h record_management/record.cpp record_management/record.h)
+    utility/noncopyable.h
+    record_management/record.cpp
+    record_management/record.h
+    record_management/table.h)
 
 add_executable(WaterySQL ${SOURCE_FILES})
