removed build files

--- a/.gitignore
+++ b/.gitignore
@@ -143,7 +143,7 @@ CTestTestfile.cmake
 
 # CMake
 cmake-build-debug/
-cmake-build-_release/
+cmake-build-release/
 cmake-build-minsizerel/
 cmake-build-relwithdebinfo/
 
