refactoring record manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,9 @@ set(SOURCE_FILES
     src/data_storage/data_descriptor.h
     src/data_storage/data.h
     src/data_storage/data.cpp
-    src/utility/noncopyable.h
+    src/utility/type_constraints/noncopyable.h
     src/record_management/record.cpp
     src/record_management/record.h
-    src/record_management/table.h src/utility/binary_stream.h src/record_management/table.cpp src/utility/bitset_holder_type_selector.h)
+    src/record_management/table.h src/utility/io_helpers/binary_stream.h src/record_management/table.cpp src/utility/type_manipulators/bitset_holder_type_selector.h src/index_management/b_tree.cpp src/index_management/b_tree.h src/index_management/b_tree_node.cpp src/index_management/b_tree_node.h src/index_management/index_manager.cpp src/index_management/index_manager.h src/page_management/page_manager.cpp src/page_management/page_manager.h src/utility/type_constraints/singleton.h src/utility/type_constraints/nonmovable.h src/errors/file_io_error.h src/page_management/page.h src/utility/io_helpers/error_printer.h src/utility/io_helpers/printer.h src/errors/error.h)
 
 add_executable(WaterySQL ${SOURCE_FILES})
