--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set(SOURCE_FILES
     src/data_storage/integer.h
     src/data_storage/data.cpp
     src/data_storage/float.h
-    src/data_storage/varchar.h)
+    src/data_storage/varchar.h src/index_management/indexNodeLink.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
