--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ set(SOURCE_FILES
     src/data_storage/data.cpp
     src/data_storage/float.h
     src/data_storage/varchar.h
-    src/index_management/indexNodeLink.h)
+    src/index_management/index_node_link.h src/utility/mathematics/sgn.h src/utility/timing/elapsed_time.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
