--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ project(WaterySQL C CXX)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_C_COMPILER "/usr/local/opt/llvm/bin/clang")
-set(CMAKE_CXX_COMPILER "/usr/local/opt/llvm/bin/clang++")
-set(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/opt/llvm/lib -lc++fs")
+#set(CMAKE_C_COMPILER "/usr/local/opt/llvm/bin/clang")
+#set(CMAKE_CXX_COMPILER "/usr/local/opt/llvm/bin/clang++")
+#set(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/opt/llvm/lib -lc++fs")
 
-#set(CMAKE_C_COMPILER gcc-8)
-#set(CMAKE_CXX_COMPILER g++-8)
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++fs")
+set(CMAKE_C_COMPILER gcc-8)
+set(CMAKE_CXX_COMPILER g++-8)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lstdc++fs")
 
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native -mtune=native -fomit-frame-pointer")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native -mtune=native -fomit-frame-pointer")
@@ -23,7 +23,7 @@ set(SOURCE_FILES
     src/page_management/filesystem_demo/MyHashMap.h
     src/page_management/filesystem_demo/MyLinkList.h
     src/config/config.h
-    src/record_management/record_descriptor.h
+    src/data_storage/record_descriptor.h
     src/data_storage/field_descriptor.h
     src/data_storage/type_tag.h
     src/data_storage/data_descriptor.h
@@ -87,7 +87,7 @@ set(SOURCE_FILES
     src/execution/drop_database_actor.h
     src/data_storage/field_constraint.h
     src/data_storage/data_comparator.h
-    src/data_storage/index_key_comparator.h)
+    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/utility/type_manipulators/string_view_converter.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
