--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ set(SOURCE_FILES
     src/data_storage/integer.h
     src/data_storage/data.cpp
     src/data_storage/float.h
-    src/data_storage/varchar.h
+    src/data_storage/char.h
     src/index_management/index_node_link.h
     src/utility/mathematics/sgn.h
     src/utility/timing/elapsed_time.h
@@ -87,7 +87,7 @@ set(SOURCE_FILES
     src/execution/drop_database_actor.h
     src/data_storage/field_constraint.h
     src/data_storage/data_comparator.h
-    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/utility/type_manipulators/string_view_converter.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h)
+    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/utility/type_manipulators/string_view_converter.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h src/parsing/token_tag_helper.h src/parsing/token_tag_helper.cpp)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
