removed data wrapper classes and instead using data views

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,6 @@ set(SOURCE_FILES
     src/data_storage/field_descriptor.h
     src/data_storage/type_tag.h
     src/data_storage/data_descriptor.h
-    src/data_storage/data.h
     src/utility/type/non_copyable.h
     src/utility/memory/binary_stream.h
     src/index_management/index_manager.cpp
@@ -63,13 +62,9 @@ set(SOURCE_FILES
     src/errors/index_manager_error.h
     src/index_management/index_entry_offset.h
     src/errors/data_error.h
-    src/data_storage/integer.h
-    src/data_storage/data.cpp
-    src/data_storage/float.h
-    src/data_storage/char.h
     src/index_management/index_node_link.h
     src/utility/mathematics/sgn.h
-    src/utility/timing/elapsed_time.h
+    src/utility/time/elapsed_time.h
     src/system_management/system_manager.cpp
     src/system_management/system_manager.h
     src/parsing/token.h
@@ -90,7 +85,7 @@ set(SOURCE_FILES
     src/execution/drop_database_actor.h
     src/data_storage/field_constraint.h
     src/data_storage/data_comparator.h
-    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h src/parsing/token_tag_helper.h src/parsing/token_tag_helper.cpp src/execution/insert_record_actor.h src/utility/io/reader.h src/utility/memory/string_view_copier.h src/data_storage/data_view.h)
+    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h src/parsing/token_tag_helper.h src/parsing/token_tag_helper.cpp src/execution/insert_record_actor.h src/utility/io/reader.h src/utility/memory/string_view_copier.h src/data_storage/data_view.h src/utility/memory/value_decoder.h src/errors/value_decoder_error.h src/utility/time/date_validator.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
