--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,8 +84,33 @@ set(SOURCE_FILES
     src/execution/drop_database_actor.h
     src/data_storage/field_constraint.h
     src/data_storage/data_comparator.h
-    src/data_storage/index_key_comparator.h src/execution/create_table_actor.h src/execution/create_index_actor.h src/execution/drop_index_actor.h src/execution/drop_table_actor.h src/execution/describe_table_actor.h src/parsing/token_tag_helper.h src/parsing/token_tag_helper.cpp src/execution/insert_record_actor.h src/utility/io/reader.h src/utility/memory/string_view_copier.h src/data_storage/data_view.h src/utility/memory/value_decoder.h src/errors/value_decoder_error.h src/utility/time/date_validator.h src/execution/column_predicate.h src/execution/delete_record_actor.h src/execution/column_predicate_operator.h src/execution/column_predicate_helper.h src/execution/update_record_actor.h src/execution/select_record_actor.h src/utility/io/identifier_printing.h src/utility/memory/identifier_comparison.h)
+    src/data_storage/index_key_comparator.h
+    src/execution/create_table_actor.h
+    src/execution/create_index_actor.h
+    src/execution/drop_index_actor.h
+    src/execution/drop_table_actor.h
+    src/execution/describe_table_actor.h
+    src/parsing/token_tag_helper.h
+    src/parsing/token_tag_helper.cpp
+    src/execution/insert_record_actor.h
+    src/utility/io/reader.h
+    src/utility/memory/string_view_copier.h
+    src/data_storage/data_view.h
+    src/utility/memory/value_decoder.h
+    src/errors/value_decoder_error.h
+    src/utility/time/date_validator.h
+    src/execution/column_predicate.h
+    src/execution/delete_record_actor.h
+    src/execution/column_predicate_operator.h
+    src/execution/column_predicate_helper.h
+    src/execution/update_record_actor.h
+    src/execution/select_record_actor.h
+    src/utility/io/identifier_printing.h
+    src/utility/memory/identifier_comparison.h
+    src/execution/execution_engine.cpp
+    src/execution/execution_engine.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
 add_executable(WaterySQL-IndexManagerTest ${SOURCE_FILES} test/index_manager_test.cpp)
+add_executable(WaterySQL-CommandParsingTest ${SOURCE_FILES} test/command_parsing_test.cpp)
