refactored record manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ set(SOURCE_FILES
     src/query/query_engine.h
     src/error/query_engine_error.h
     src/data/type_tag_helper.h
-    src/action/execute_file_actor.h src/query/predicate_efficiency_estimator.cpp src/query/predicate_efficiency_estimator.h src/query/predicate.h)
+    src/action/execute_file_actor.h src/query/predicate_efficiency_estimator.cpp src/query/predicate_efficiency_estimator.h src/query/predicate.h src/record/table.cpp src/error/record_offset_out_of_range.h src/error/record_not_found.h src/error/record_slot_usage_bitmap_corrupt.h src/error/negative_foreign_key_reference_count.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
