--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,7 +105,17 @@ set(SOURCE_FILES
     src/query/query_engine.h
     src/error/query_engine_error.h
     src/data/type_tag_helper.h
-    src/action/execute_file_actor.h src/query/predicate_efficiency_estimator.cpp src/query/predicate_efficiency_estimator.h src/query/predicate.h src/record/table.cpp src/error/record_offset_out_of_range.h src/error/record_not_found.h src/error/record_slot_usage_bitmap_corrupt.h src/error/negative_foreign_key_reference_count.h src/error/record_oversized.h src/error/closing_shared_table.h)
+    src/action/execute_file_actor.h
+    src/query/predicate_efficiency_estimator.cpp
+    src/query/predicate_efficiency_estimator.h
+    src/query/predicate.h src/record/table.cpp
+    src/error/record_offset_out_of_range.h
+    src/error/record_not_found.h
+    src/error/record_slot_usage_bitmap_corrupt.h
+    src/error/negative_foreign_key_reference_count.h
+    src/error/record_oversized.h
+    src/error/closing_shared_table.h
+    src/index/index.cpp src/error/empty_index_tree.h src/error/index_entry_offset_out_of_range.h src/error/index_entry_not_found.h src/error/unique_search_in_non_unique_index.h src/error/conflict_index_entry_insertion.h src/error/closing_shared_index.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
