implemented delete/update with brute force.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ set(SOURCE_FILES
     src/query/query_engine.h
     src/data/type_tag_helper.h
     src/action/execute_file_actor.h
-    src/query/query_predicate.h src/record/table.cpp
+    src/query/single_table_predicate.h src/record/table.cpp
     src/error/record_offset_out_of_range.h
     src/error/record_not_found.h
     src/error/record_slot_usage_bitmap_corrupt.h
@@ -118,7 +118,15 @@ set(SOURCE_FILES
     src/error/unique_search_in_non_unique_index.h
     src/error/conflict_index_entry_insertion.h
     src/error/closing_shared_index.h
-    src/error/index_entry_oversized.h src/error/too_many_columns_to_insert.h src/error/invalid_null_field.h src/error/field_not_found.h src/error/negative_record_reference_count.h src/error/deleting_referenced_record.h)
+    src/error/index_entry_oversized.h
+    src/error/too_many_columns_to_insert.h
+    src/error/invalid_null_field.h
+    src/error/field_not_found.h
+    src/error/negative_record_reference_count.h
+    src/error/deleting_referenced_record.h
+    src/error/conflict_record_field_update.h
+    src/error/invalid_primary_key_update.h
+    src/error/record_reference_not_counted.h)
 
 add_executable(WaterySQL ${SOURCE_FILES} src/main.cpp)
 add_executable(WaterySQL-RecordManagerTest ${SOURCE_FILES} test/record_manager_test.cpp)
